# manifold

./: .gitignore  docker-compose.ory.yml  docker-compose.services.yml  docker-compose.yml  package.json  pnpm-lock.yaml  services.docker-compose.yml
backend/: .dockerignore  .gitignore  Cargo.toml  README.md  dockerfile
backend/config/: development.yaml  production.yaml
backend/core/: Cargo.toml
backend/core/src/: lib.rs  startup.rs
backend/core/src/models/: domain.rs  domains.rs  error.rs  login_identity.rs  mod.rs  users.rs
backend/core/src/routes/: auth.rs  domains.rs  health_check.rs  mod.rs  users.rs
backend/core/src/types/: db.rs  mod.rs
backend/core/src/util/: configuration.rs  domains.rs  health_check.rs  tests.rs  users.rs
backend/core/src/util/auth/: login.rs  login_identity.rs  mod.rs  session.rs  tokens.rs
backend/macros/: Cargo.toml
backend/macros/src/: lib.rs
backend/macros/src/auth/: roles.rs
backend/migrations/: 20230430085511_Add_users_table.sql  20230511151506_add-users-table.down.sql  20230511151506_add-users-table.up.sql  20230828034517_add-domain-tables.down.sql  20230828034517_add-domain-tables.up.sql  20230912033054_sessions.down.sql  20230912033054_sessions.up.sql  20231009121507_domains.down.sql  20231009121507_domains.up.sql
backend/settings/: base.yaml  development.yaml  production.yaml
backend/src/: common.rs  lib.rs  main.rs  startup.rs
backend/src/models/: domains.rs  error.rs  login_identity.rs  mod.rs  users.rs
backend/src/routes/: auth.rs  domains.rs  health_check.rs  mod.rs  users.rs
backend/src/types/: error.rs  mod.rs  redis.rs  tokens.rs
backend/src/util/: configuration.rs  database.rs  domains.rs  email.rs  environment.rs  health_check.rs  login_identity.rs  mod.rs  telemetry.rs  tests.rs  users.rs
backend/src/util/auth/: login.rs  login_identity.rs  mod.rs  password.rs  session.rs  tokens.rs
backend/templates/: verification_email.html
client/: .prettierrc  dockerfile  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json  vite.config.ts
client/public/images/: manifold-logo.svelte
client/src/: stores.ts
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/src/: lib.rs
client/src/components/: modal-page.svelte  modal.svelte  tab.svelte
client/src/components/UINode/: UINode.svelte
client/src/components/context-menus/: context-menu.svelte
client/src/components/modals/: modal-page.svelte  modal.svelte
client/src/components/modals/domains/: create-domain-modal.svelte  join-domain-modal.svelte
client/src/routes/: +layout.server.ts  +layout.svelte  +page.svelte  main-section.svelte  overlay.svelte  sidebar.svelte
client/src/routes/domains/: +layout.svelte  +page.svelte  DomainCard.svelte  domain-card.svelte  domains.svelte
client/src/routes/domains/[...id]/: +layout.svelte  +page.svelte
client/src/routes/friends/: +layout.svelte  +page.svelte
client/src/routes/login/: +page.server.ts  +page.svelte
client/src/routes/settings/: +page.svelte
client/src/routes/signup/: +page.svelte
client/src/routes/verify/: +page.svelte
client/src/stores/: contextMenuStore.ts  currentUser.ts  domainsStore.ts  modalState.ts  modalStore.ts  sidebarActions.ts  sidebarActionsStore.ts
client/src/styles/: globalStyles.css  globalStyles.css.map  globalStyles.scss
client/src/types/: tabInfo.ts
client/src/utils/: cookie.ts  fetch.ts  transitions.ts  types.ts
manifold-backend/: .dockerignore  Cargo.toml  README.md  dockerfile
manifold-backend/.cargo/: config.toml
manifold-backend/migrations/: 20230419134958_messages_table.sql  20230430085511_Add_users_table.sql
manifold-backend/src/: main.rs
manifold-backend/src/models/: error.rs  messages.rs  users.rs
manifold-backend/src/routes/: health_check.rs  messages.rs  mod.rs  users.rs
manifold-backend/src/util/: configuration.rs  database.rs  environment.rs  mod.rs  tests.rs  url.rs  users.rs
manifold-client/: package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
services/: kurento.dockerfile
services/kratos/config/: kratos.yml
(+3 files in other folders)
