[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/main.rs"
name = "backend"

[dependencies]
actix-web = "4"
argonautica = { version = "0.2.0", features = ["simd"] }
chrono = { version = "0.4.24", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
futures = { version = "0.3.28", features = ["compat"] }
jsonwebtoken = "8.3.0"
once_cell = "1.17.1"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
sqlx = { version = "0.6.3", default-features = false, features = ["runtime-actix-rustls", "mysql", "macros", "uuid", "chrono"] }
uuid = { version = "1.3.1", features = ["v4", "serde"] }
validator = "0.16.0"
validator_derive = "0.16.0"
