[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "backend"

[dependencies]
actix-web = "4"
argonautica = { version = "0.2.0", features = ["simd"] }
chrono = { version = "0.4.24", features = ["serde"] }
color-eyre = "0.6.2"
config = "0.13.3"
deadpool-redis = { version = "0.12.0", features = ["rt_tokio_1"]}
dotenvy = "0.15.7"
env_logger = "0.10.0"
futures = { version = "0.3.28", features = ["compat"] }
hex = "0.4.3"
jsonwebtoken = "8.3.0"
lettre = { version = "0.10.4", features = ["builder", "tokio1-native-tls"] }
minijinja = { version = "0.32.1", features = ["source"] }
once_cell = "1.17.1"
pasetors = "0.6.6"
rand = { version = "0.8.5", features = ["getrandom"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = { version = "1.0.96", features = ["raw_value"] }
sqlx = { version = "0.6.3", default-features = false, features = ["runtime-actix-rustls", "mysql", "macros", "chrono", "migrate", "uuid"] }
tracing = "0.1.37"
tracing-subscriber = { version  = "0.3.17", features = ["fmt", "std", "env-filter", "registry", "json", "tracing-log"] }
uuid = { version = "1.3.1", features = ["v4", "serde"] }
validator = "0.16.0"
validator_derive = "0.16.0"
