[package]
name = "manifold-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
dotenv = "0.15.0"
serde = "1.0.159"
serde_json = "1.0.95"
sqlx = { version = "0.6.3", features = ["runtime-actix-rustls", "mysql"] }
