[package]
name = "manifold-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
cargo-run-script = "0.1.0"
dotenv = "0.15.0"
env_logger = "0.10.0"
once_cell = "1.17.1"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
sqlx = { version = "0.6.3", features = ["runtime-actix-rustls", "mysql", "macros"] }
