[package]
name = "manifold-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
dotenv = "0.15.0"
env_logger = "0.10.0"
once_cell = "1.17.1"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
sqlx = { version = "0.6.3", features = ["runtime-actix-rustls", "mysql", "macros"] }
uuid = { version = "1.3.1", features = ["v4"] }
